09/17/2003 Bob Rossi <bob@brasko.net>

   * TODO: Update what I think needs to be done next.

09/15/2003 Bob Rossi <bob@brasko.net>

   * gdbmi_tgdb.c: gdbmi_tgdb_recv, stubbed out function.
   * types.h: enum INTERFACE_COMMANDS, removed TGDB_QUIT and added
   TGDB_QUIT_NORMAL and TGDB_QUIT_ABNORMAL
   * driver.c: gdb_input, changed to handle new TGDB_QUIT commands.
   * tgdb.c: Added HAVE_SYS_TYPES_H and HAVE_SYS_WAIT_H
   added tgdb_get_quit_command.
   tgdb_recv_debugger_data, call tgdb_get_quit_command instead of just adding
   TGDB_QUIT to the list.
   * types.c: tgdb_print_item, add case to switch for TGDB_QUIT_* commands.

09/12/2003 Bob Rossi <bob@brasko.net>

   * commands.c: global 'struct commands' add 'field_5_newline_hit' member
   commands_initialize, initialize new member field_5_newline_hit 
   parse_breakpoint, add check to not try to parse watchpoint variable names.
   commands_set_field_num, set new member to 0
   commands_process, set new member if need be.

09/10/2003 Bob Rossi <bob@brasko.net>

   * tgdb.h: add tgdb_set_verbose_gui_command_output prototype
   * tgdb.c: global struct tgdb, add show_gui_commands member.
   tgdb_initialize, initialize show_gui_commands
   tgdb_recv_debugger_data, modfiy to return gui command
   tgdb_set_verbose_gui_command_output, implement new config option.

09/09/2003 Bob Rossi <bob@brasko.net>

   * tgdb.h: tgdb_run_debugger_command, tgdb_modify_breakpoint, both of the
   return values of these 2 functions are changed front char* to an int.
   * driver.c: change testing routine.
   * tgdb.c: global tgdb structure, add last_gui_command
   initialize_tgdb_context, initialize new component last_gui_command
   tgdb_send, update comments and return value. Change third parameter from
   'int out_type' to 'enum buffer_command_type bct'. Removed internals of
   function related to char* return value.
   tgdb_deliver_command, set last_gui_command if command is a GUI command